--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+
+    <!-- Подключим библиотеку React -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+
     <title>Аренда яхт</title>
   </head>
 
