--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <!-- Подключим библиотеку React -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <!-- Подключим библиотеку ReactDOM -->
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
     <title>Аренда яхт</title>
   </head>
