--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <!-- Подключим библиотеку ReactDOM -->
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- Подключим библиотеку BabelJS -->
+    <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <title>Аренда яхт</title>
   </head>
