--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <body>
     <div id="root"></div>
     <script type="text/babel">
-
+      //Находим корневой элемент страницы
+      const container = document.getElementById('root');
     </script>
   </body>
 </html>
