--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script type="text/babel">
       //Находим корневой элемент страницы
       const container = document.getElementById('root');
+      //Создаём корень для отображения React-компонентов внутри узла DOM браузера
+      const root = ReactDOM.createRoot(container);
     </script>
   </body>
 </html>
