--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       const container = document.getElementById('root');
       //Создаём корень для отображения React-компонентов внутри узла DOM браузера
       const root = ReactDOM.createRoot(container);
+      //Отображаем компонент на странице
+      root.render();
     </script>
   </body>
 </html>
