--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       //Создаём корень для отображения React-компонентов внутри узла DOM браузера
       const root = ReactDOM.createRoot(container);
       //Отображаем компонент на странице
-      root.render();
+      root.render(<App/>);
     </script>
   </body>
 </html>
