--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       const root = ReactDOM.createRoot(container);
       //Отображаем компонент на странице
       root.render(<App/>);
+
+      //Функция, которая описывает корневой компонент приложения и служит отправной точкой для дерева компонентов
+      function App(){
+        return <h1>Аренда яхт</h1>;
+      }
     </script>
   </body>
 </html>
