--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Подключим библиотеку BabelJS -->
     <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
+    <link rel="stylesheet" href="css/style.css">
+
     <title>Аренда яхт</title>
   </head>
 
