--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       //Функция, которая описывает корневой компонент приложения и служит отправной точкой для дерева компонентов
       function App(){
-        return <h1>Аренда яхт</h1>;
+        return ;
       }
     </script>
   </body>
