--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
       //Функция, которая описывает корневой компонент приложения и служит отправной точкой для дерева компонентов
       function App(){
-        return ;
+        return (
+
+        );
       }
     </script>
   </body>
