--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
       //Функция, которая описывает корневой компонент приложения и служит отправной точкой для дерева компонентов
       function App(){
         return (
+          <section className="rent">
+            <ul className="cards">
 
+            </ul>
+          </section>
         );
       }
     </script>
