--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
           <section className="rent">
             <ul className="cards">
               {
-
+                /*Помещаем сюда разметку карточки в формате JSX*/
+                <li className="card">
+                  <img className="card-img" src="img/photo-card-1.jpg" width="280" height="140" alt="Белая двухпалубная яхта"/>
+                  <div className="card-content">
+                    <h3 className="card-title">Катер Meridian 401</h3>
+                    <p className="card-description">Яхта 401 длиной 12.5 метров и шириной 4.2 метра</p>
+                    <ul className="card-features">
+                      <li>2 каюты</li>
+                      <li>4 спальных места</li>
+                      <li>аудиосистема, кондиционер</li>
+                    </ul>
+                  </div>
+                  <p className="card-price">
+                    <span className="card-price-name">Цена:</span>
+                    <span className="card-price-value">14 000 ₽/час</span>
+                  </p>
+                </li>
               }
             </ul>
           </section>
