--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
       //Функция, которая описывает корневой компонент приложения и служит отправной точкой для дерева компонентов
       function App(){
+        const name = 'Катер Meridian 401';
         return (
           <section className="rent">
             <ul className="cards">
@@ -36,7 +37,7 @@
                 <li className="card">
                   <img className="card-img" src="img/photo-card-1.jpg" width="280" height="140" alt="Белая двухпалубная яхта"/>
                   <div className="card-content">
-                    <h3 className="card-title">Катер Meridian 401</h3>
+                    <h3 className="card-title"></h3>
                     <p className="card-description">Яхта 401 длиной 12.5 метров и шириной 4.2 метра</p>
                     <ul className="card-features">
                       <li>2 каюты</li>
