--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       //Функция, которая описывает корневой компонент приложения и служит отправной точкой для дерева компонентов
       function App(){
         const name = 'Катер Meridian 401';
+        const description = 'Яхта 401 длиной 12.5 метров и шириной 4.2 метра';
         return (
           <section className="rent">
             <ul className="cards">
@@ -38,7 +39,7 @@
                   <img className="card-img" src="img/photo-card-1.jpg" width="280" height="140" alt="Белая двухпалубная яхта"/>
                   <div className="card-content">
                     <h3 className="card-title"></h3>
-                    <p className="card-description">Яхта 401 длиной 12.5 метров и шириной 4.2 метра</p>
+                    <p className="card-description"></p>
                     <ul className="card-features">
                       <li>2 каюты</li>
                       <li>4 спальных места</li>
