--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
       function App(){
         const name = 'Катер Meridian 401';
         const description = 'Яхта 401 длиной 12.5 метров и шириной 4.2 метра';
+        const img = 'img/photo-card-1.jpg';
         return (
           <section className="rent">
             <ul className="cards">
               {
                 /*Помещаем сюда разметку карточки в формате JSX*/
                 <li className="card">
-                  <img className="card-img" src="img/photo-card-1.jpg" width="280" height="140" alt="Белая двухпалубная яхта"/>
+                  <img className="card-img" src="" width="280" height="140" alt="Белая двухпалубная яхта"/>
                   <div className="card-content">
                     <h3 className="card-title"></h3>
                     <p className="card-description"></p>
