--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li className="card">
                   <img className="card-img" src="" width="280" height="140" alt="Белая двухпалубная яхта"/>
                   <div className="card-content">
-                    <h3 className="card-title"></h3>
+                    <h3 className="card-title">{name}</h3>
                     <p className="card-description"></p>
                     <ul className="card-features">
                       <li>2 каюты</li>
