--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <img className="card-img" src="" width="280" height="140" alt="Белая двухпалубная яхта"/>
                   <div className="card-content">
                     <h3 className="card-title">{name}</h3>
-                    <p className="card-description"></p>
+                    <p className="card-description">{description}</p>
                     <ul className="card-features">
                       <li>2 каюты</li>
                       <li>4 спальных места</li>
