--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               {
                 /*Помещаем сюда разметку карточки в формате JSX*/
                 <li className="card">
-                  <img className="card-img" src="" width="280" height="140" alt="Белая двухпалубная яхта"/>
+                  <img className="card-img" src={img} width="280" height="140" alt="Белая двухпалубная яхта"/>
                   <div className="card-content">
                     <h3 className="card-title">{name}</h3>
                     <p className="card-description">{description}</p>
