--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         const name = 'Катер Meridian 401';
         const description = 'Яхта 401 длиной 12.5 метров и шириной 4.2 метра';
         const img = 'img/photo-card-1.jpg';
+        const price = 14000;
         return (
           <section className="rent">
             <ul className="cards">
@@ -49,7 +50,7 @@
                   </div>
                   <p className="card-price">
                     <span className="card-price-name">Цена:</span>
-                    <span className="card-price-value">14 000 ₽/час</span>
+                    <span className="card-price-value">{price}</span>
                   </p>
                 </li>
               }
