--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         const description = 'Яхта 401 длиной 12.5 метров и шириной 4.2 метра';
         const img = 'img/photo-card-1.jpg';
         const price = 14000;
-        const formattedPrice = price.toLocaleString();
+        const formattedPrice = `${price.toLocaleString()} ₽/час`;
         return (
           <section className="rent">
             <ul className="cards">
